--- a/.github/workflows/run-pipeline.yml
+++ b/.github/workflows/run-pipeline.yml
@@ -5,6 +5,9 @@ on:
   schedule:
     - cron: "0 * * * *"   # every hour (UTC)
 
+permissions:
+  contents: write
+
 concurrency:
   group: insta-news-queue
   cancel-in-progress: false
@@ -16,6 +19,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -51,3 +57,4 @@ jobs:
           git add queue.json
           git diff --cached --quiet || git commit -m "Update queue state [bot]"
           git push
+
